# maman

./: .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: workflow.yml
doc/: maman.adoc
man/man1/: maman.1
src/: lib.rs  main.rs  tests.rs
src/maman/: mod.rs  page.rs
tests/: lib.rs
