[package]
name = "maman"
# When updating version, also modify html_root_url in the src/lib.rs file.
version = "0.12.1"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Rust Web Crawler"
repository = "https://github.com/spk/maman.git"
homepage = "https://github.com/spk/maman"
keywords = ["http", "web", "crawler", "spider"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "spk/maman" }

[dependencies]
reqwest = "0.7"
html5ever = "0.10"
html5ever-atoms = "0.1"
tendril = "0.2"
string_cache = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.4"
url_serde = "0.2"
robotparser = "0.9"
sidekiq = "0.7"
encoding = "0.2"
log = "0.3"
env_logger = "0.3"
clippy = { version = "0.0.*", optional = true }

[features]
unstable = []
lint = ["clippy"]
