[package]
name = "maman"
# When updating version, also modify html_root_url in the src/lib.rs file.
version = "0.12.1"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Rust Web Crawler"
repository = "https://github.com/spk/maman.git"
homepage = "https://github.com/spk/maman"
keywords = ["http", "web", "crawler", "spider"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "spk/maman" }

[dependencies]
reqwest = "0.8"
mime = "0.3"
html5ever = "0.20"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.4"
url_serde = "0.2"
robotparser = "0.10"
sidekiq = "0.8"
encoding = "0.2"
log = "0.4"
env_logger = "0.4"
clippy = { version = "0.0.*", optional = true }

[features]
unstable = []
lint = ["clippy"]
