[package]
name = "maman"
# When updating version, also modify html_root_url in the src/lib.rs file.
version = "0.13.1"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Rust Web Crawler"
repository = "https://github.com/spk/maman.git"
homepage = "https://github.com/spk/maman"
keywords = ["http", "web", "crawler", "spider"]
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["Justfile", "rustfmt.toml"]

[badges]
travis-ci = { repository = "spk/maman" }

[dependencies]
env_logger = "0.7"
html5ever = "0.25"
log = "0.4"
mime = "0.3"
reqwest = "0.9"
robotparser = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sidekiq = "0.8"
url = { version = "2.0", features = ["serde"] }

[dev-dependencies]
mockito = "0.23"
